ICG/y.output
Terminals unused in grammar

   CONST_CHAR
   STRING
   DO
   BREAK
   CONTINUE
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   BITOP


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN RPAREN SEMICOLON

    9 $@1: %empty

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement

   11 $@2: %empty

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement

   13 parameter_list: parameter_list COMMA type_specifier ID
   14               | parameter_list COMMA type_specifier
   15               | type_specifier ID
   16               | type_specifier

   17 $@3: %empty

   18 compound_statement: LCURL $@3 statements RCURL
   19                   | LCURL RCURL

   20 var_declaration: type_specifier declaration_list SEMICOLON

   21 type_specifier: INT
   22               | FLOAT
   23               | VOID

   24 declaration_list: declaration_list COMMA ID
   25                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   26                 | ID
   27                 | ID LTHIRD CONST_INT RTHIRD

   28 statements: statement
   29           | statements statement

   30 statement: var_declaration
   31          | expression_statement
   32          | compound_statement
   33          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement
   35          | IF LPAREN expression RPAREN statement ELSE statement
   36          | WHILE LPAREN expression RPAREN statement
   37          | PRINTLN LPAREN ID RPAREN SEMICOLON
   38          | RETURN expression SEMICOLON

   39 expression_statement: SEMICOLON
   40                     | expression SEMICOLON

   41 variable: ID
   42         | ID LTHIRD expression RTHIRD

   43 expression: logic_expression
   44           | variable ASSIGNOP logic_expression

   45 logic_expression: rel_expression
   46                 | rel_expression LOGICOP rel_expression

   47 rel_expression: simple_expression
   48               | simple_expression RELOP simple_expression

   49 simple_expression: term
   50                  | simple_expression ADDOP term

   51 term: unary_expression
   52     | term MULOP unary_expression

   53 unary_expression: ADDOP unary_expression
   54                 | NOT unary_expression
   55                 | factor

   56 factor: variable
   57       | ID LPAREN argument_list RPAREN
   58       | LPAREN expression RPAREN
   59       | CONST_INT
   60       | CONST_FLOAT
   61       | variable INCOP
   62       | variable DECOP

   63 argument_list: arguments
   64              | %empty

   65 arguments: arguments COMMA logic_expression
   66          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 7 8 10 12 13 15 24 25 26 27 37 41 42 57
CONST_INT (259) 25 27 59
CONST_FLOAT (260) 60
CONST_CHAR (261)
ADDOP (262) 50 53
MULOP (263) 52
LOGICOP (264) 46
RELOP (265) 48
STRING (266)
IF (267) 34 35
ELSE (268) 35
FOR (269) 33
WHILE (270) 36
DO (271)
BREAK (272)
CONTINUE (273)
INT (274) 21
FLOAT (275) 22
CHAR (276)
DOUBLE (277)
VOID (278) 23
RETURN (279) 38
SWITCH (280)
CASE (281)
DEFAULT (282)
INCOP (283) 61
DECOP (284) 62
ASSIGNOP (285) 44
LPAREN (286) 7 8 10 12 33 34 35 36 37 57 58
RPAREN (287) 7 8 10 12 33 34 35 36 37 57 58
LCURL (288) 18 19
RCURL (289) 18 19
LTHIRD (290) 25 27 42
RTHIRD (291) 25 27 42
SEMICOLON (292) 7 8 20 37 38 39 40
COMMA (293) 13 14 24 25 65
NOT (294) 54
PRINTLN (295) 37
BITOP (296)
ELSE_LOWER (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
start (44)
    on left: 1, on right: 0
program (45)
    on left: 2 3, on right: 1 2
unit (46)
    on left: 4 5 6, on right: 2 3
func_declaration (47)
    on left: 7 8, on right: 5
func_definition (48)
    on left: 10 12, on right: 6
$@1 (49)
    on left: 9, on right: 10
$@2 (50)
    on left: 11, on right: 12
parameter_list (51)
    on left: 13 14 15 16, on right: 7 10 13 14
compound_statement (52)
    on left: 18 19, on right: 10 12 32
$@3 (53)
    on left: 17, on right: 18
var_declaration (54)
    on left: 20, on right: 4 30
type_specifier (55)
    on left: 21 22 23, on right: 7 8 10 12 13 14 15 16 20
declaration_list (56)
    on left: 24 25 26 27, on right: 20 24 25
statements (57)
    on left: 28 29, on right: 18 29
statement (58)
    on left: 30 31 32 33 34 35 36 37 38, on right: 28 29 33 34 35 36
expression_statement (59)
    on left: 39 40, on right: 31 33
variable (60)
    on left: 41 42, on right: 44 56 61 62
expression (61)
    on left: 43 44, on right: 33 34 35 36 38 40 42 58
logic_expression (62)
    on left: 45 46, on right: 43 44 65 66
rel_expression (63)
    on left: 47 48, on right: 45 46
simple_expression (64)
    on left: 49 50, on right: 47 48 50
term (65)
    on left: 51 52, on right: 49 50 52
unary_expression (66)
    on left: 53 54 55, on right: 51 52 53 54
factor (67)
    on left: 56 57 58 59 60 61 62, on right: 55
argument_list (68)
    on left: 63 64, on right: 57
arguments (69)
    on left: 65 66, on right: 63 65


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   21 type_specifier: INT .

    $default  reduce using rule 21 (type_specifier)


State 2

   22 type_specifier: FLOAT .

    $default  reduce using rule 22 (type_specifier)


State 3

   23 type_specifier: VOID .

    $default  reduce using rule 23 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 11


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration .

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition .

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier . ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier . ID LPAREN RPAREN SEMICOLON
   10 func_definition: type_specifier . ID LPAREN parameter_list RPAREN $@1 compound_statement
   12                | type_specifier . ID LPAREN RPAREN $@2 compound_statement
   20 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID . LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID . LPAREN RPAREN SEMICOLON
   10 func_definition: type_specifier ID . LPAREN parameter_list RPAREN $@1 compound_statement
   12                | type_specifier ID . LPAREN RPAREN $@2 compound_statement
   26 declaration_list: ID .
   27                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 26 (declaration_list)


State 14

   20 var_declaration: type_specifier declaration_list . SEMICOLON
   24 declaration_list: declaration_list . COMMA ID
   25                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    SEMICOLON  shift, and go to state 17
    COMMA      shift, and go to state 18


State 15

    7 func_declaration: type_specifier ID LPAREN . parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN . RPAREN SEMICOLON
   10 func_definition: type_specifier ID LPAREN . parameter_list RPAREN $@1 compound_statement
   12                | type_specifier ID LPAREN . RPAREN $@2 compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 19

    parameter_list  go to state 20
    type_specifier  go to state 21


State 16

   27 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   20 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 20 (var_declaration)


State 18

   24 declaration_list: declaration_list COMMA . ID
   25                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 19

    8 func_declaration: type_specifier ID LPAREN RPAREN . SEMICOLON
   12 func_definition: type_specifier ID LPAREN RPAREN . $@2 compound_statement

    SEMICOLON  shift, and go to state 24

    $default  reduce using rule 11 ($@2)

    $@2  go to state 25


State 20

    7 func_declaration: type_specifier ID LPAREN parameter_list . RPAREN SEMICOLON
   10 func_definition: type_specifier ID LPAREN parameter_list . RPAREN $@1 compound_statement
   13 parameter_list: parameter_list . COMMA type_specifier ID
   14               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 26
    COMMA   shift, and go to state 27


State 21

   15 parameter_list: type_specifier . ID
   16               | type_specifier .

    ID  shift, and go to state 28

    $default  reduce using rule 16 (parameter_list)


State 22

   27 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 29


State 23

   24 declaration_list: declaration_list COMMA ID .
   25                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 30

    $default  reduce using rule 24 (declaration_list)


State 24

    8 func_declaration: type_specifier ID LPAREN RPAREN SEMICOLON .

    $default  reduce using rule 8 (func_declaration)


State 25

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 . compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 32


State 26

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN . SEMICOLON
   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN . $@1 compound_statement

    SEMICOLON  shift, and go to state 33

    $default  reduce using rule 9 ($@1)

    $@1  go to state 34


State 27

   13 parameter_list: parameter_list COMMA . type_specifier ID
   14               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 35


State 28

   15 parameter_list: type_specifier ID .

    $default  reduce using rule 15 (parameter_list)


State 29

   27 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 27 (declaration_list)


State 30

   25 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 36


State 31

   18 compound_statement: LCURL . $@3 statements RCURL
   19                   | LCURL . RCURL

    RCURL  shift, and go to state 37

    $default  reduce using rule 17 ($@3)

    $@3  go to state 38


State 32

   12 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement .

    $default  reduce using rule 12 (func_definition)


State 33

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (func_declaration)


State 34

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 31

    compound_statement  go to state 39


State 35

   13 parameter_list: parameter_list COMMA type_specifier . ID
   14               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 40

    $default  reduce using rule 14 (parameter_list)


State 36

   25 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 41


State 37

   19 compound_statement: LCURL RCURL .

    $default  reduce using rule 19 (compound_statement)


State 38

   18 compound_statement: LCURL $@3 . statements RCURL

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    IF           shift, and go to state 46
    FOR          shift, and go to state 47
    WHILE        shift, and go to state 48
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 49
    LPAREN       shift, and go to state 50
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 51
    NOT          shift, and go to state 52
    PRINTLN      shift, and go to state 53

    compound_statement    go to state 54
    var_declaration       go to state 55
    type_specifier        go to state 56
    statements            go to state 57
    statement             go to state 58
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 39

   10 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@1 compound_statement .

    $default  reduce using rule 10 (func_definition)


State 40

   13 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 13 (parameter_list)


State 41

   25 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 25 (declaration_list)


State 42

   41 variable: ID .
   42         | ID . LTHIRD expression RTHIRD
   57 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 68
    LTHIRD  shift, and go to state 69

    $default  reduce using rule 41 (variable)


State 43

   59 factor: CONST_INT .

    $default  reduce using rule 59 (factor)


State 44

   60 factor: CONST_FLOAT .

    $default  reduce using rule 60 (factor)


State 45

   53 unary_expression: ADDOP . unary_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable          go to state 70
    unary_expression  go to state 71
    factor            go to state 67


State 46

   34 statement: IF . LPAREN expression RPAREN statement
   35          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 72


State 47

   33 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 73


State 48

   36 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 74


State 49

   38 statement: RETURN . expression SEMICOLON

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable           go to state 60
    expression         go to state 75
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 50

   58 factor: LPAREN . expression RPAREN

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable           go to state 60
    expression         go to state 76
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 51

   39 expression_statement: SEMICOLON .

    $default  reduce using rule 39 (expression_statement)


State 52

   54 unary_expression: NOT . unary_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable          go to state 70
    unary_expression  go to state 77
    factor            go to state 67


State 53

   37 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 78


State 54

   32 statement: compound_statement .

    $default  reduce using rule 32 (statement)


State 55

   30 statement: var_declaration .

    $default  reduce using rule 30 (statement)


State 56

   20 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 79

    declaration_list  go to state 14


State 57

   18 compound_statement: LCURL $@3 statements . RCURL
   29 statements: statements . statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    IF           shift, and go to state 46
    FOR          shift, and go to state 47
    WHILE        shift, and go to state 48
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 49
    LPAREN       shift, and go to state 50
    LCURL        shift, and go to state 31
    RCURL        shift, and go to state 80
    SEMICOLON    shift, and go to state 51
    NOT          shift, and go to state 52
    PRINTLN      shift, and go to state 53

    compound_statement    go to state 54
    var_declaration       go to state 55
    type_specifier        go to state 56
    statement             go to state 81
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 58

   28 statements: statement .

    $default  reduce using rule 28 (statements)


State 59

   31 statement: expression_statement .

    $default  reduce using rule 31 (statement)


State 60

   44 expression: variable . ASSIGNOP logic_expression
   56 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP     shift, and go to state 82
    DECOP     shift, and go to state 83
    ASSIGNOP  shift, and go to state 84

    $default  reduce using rule 56 (factor)


State 61

   40 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 85


State 62

   43 expression: logic_expression .

    $default  reduce using rule 43 (expression)


State 63

   45 logic_expression: rel_expression .
   46                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 86

    $default  reduce using rule 45 (logic_expression)


State 64

   47 rel_expression: simple_expression .
   48               | simple_expression . RELOP simple_expression
   50 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 87
    RELOP  shift, and go to state 88

    $default  reduce using rule 47 (rel_expression)


State 65

   49 simple_expression: term .
   52 term: term . MULOP unary_expression

    MULOP  shift, and go to state 89

    $default  reduce using rule 49 (simple_expression)


State 66

   51 term: unary_expression .

    $default  reduce using rule 51 (term)


State 67

   55 unary_expression: factor .

    $default  reduce using rule 55 (unary_expression)


State 68

   57 factor: ID LPAREN . argument_list RPAREN

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    $default  reduce using rule 64 (argument_list)

    variable           go to state 70
    logic_expression   go to state 90
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67
    argument_list      go to state 91
    arguments          go to state 92


State 69

   42 variable: ID LTHIRD . expression RTHIRD

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable           go to state 60
    expression         go to state 93
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 70

   56 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP  shift, and go to state 82
    DECOP  shift, and go to state 83

    $default  reduce using rule 56 (factor)


State 71

   53 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 53 (unary_expression)


State 72

   34 statement: IF LPAREN . expression RPAREN statement
   35          | IF LPAREN . expression RPAREN statement ELSE statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable           go to state 60
    expression         go to state 94
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 73

   33 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    SEMICOLON    shift, and go to state 51
    NOT          shift, and go to state 52

    expression_statement  go to state 95
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 74

   36 statement: WHILE LPAREN . expression RPAREN statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable           go to state 60
    expression         go to state 96
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 75

   38 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 97


State 76

   58 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 98


State 77

   54 unary_expression: NOT unary_expression .

    $default  reduce using rule 54 (unary_expression)


State 78

   37 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 99


State 79

   26 declaration_list: ID .
   27                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 26 (declaration_list)


State 80

   18 compound_statement: LCURL $@3 statements RCURL .

    $default  reduce using rule 18 (compound_statement)


State 81

   29 statements: statements statement .

    $default  reduce using rule 29 (statements)


State 82

   61 factor: variable INCOP .

    $default  reduce using rule 61 (factor)


State 83

   62 factor: variable DECOP .

    $default  reduce using rule 62 (factor)


State 84

   44 expression: variable ASSIGNOP . logic_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable           go to state 70
    logic_expression   go to state 100
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 85

   40 expression_statement: expression SEMICOLON .

    $default  reduce using rule 40 (expression_statement)


State 86

   46 logic_expression: rel_expression LOGICOP . rel_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable           go to state 70
    rel_expression     go to state 101
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 87

   50 simple_expression: simple_expression ADDOP . term

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable          go to state 70
    term              go to state 102
    unary_expression  go to state 66
    factor            go to state 67


State 88

   48 rel_expression: simple_expression RELOP . simple_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable           go to state 70
    simple_expression  go to state 103
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 89

   52 term: term MULOP . unary_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable          go to state 70
    unary_expression  go to state 104
    factor            go to state 67


State 90

   66 arguments: logic_expression .

    $default  reduce using rule 66 (arguments)


State 91

   57 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 105


State 92

   63 argument_list: arguments .
   65 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 106

    $default  reduce using rule 63 (argument_list)


State 93

   42 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 107


State 94

   34 statement: IF LPAREN expression . RPAREN statement
   35          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 108


State 95

   33 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    SEMICOLON    shift, and go to state 51
    NOT          shift, and go to state 52

    expression_statement  go to state 109
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 96

   36 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 110


State 97

   38 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 38 (statement)


State 98

   58 factor: LPAREN expression RPAREN .

    $default  reduce using rule 58 (factor)


State 99

   37 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 111


State 100

   44 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 44 (expression)


State 101

   46 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 46 (logic_expression)


State 102

   50 simple_expression: simple_expression ADDOP term .
   52 term: term . MULOP unary_expression

    MULOP  shift, and go to state 89

    $default  reduce using rule 50 (simple_expression)


State 103

   48 rel_expression: simple_expression RELOP simple_expression .
   50 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 87

    $default  reduce using rule 48 (rel_expression)


State 104

   52 term: term MULOP unary_expression .

    $default  reduce using rule 52 (term)


State 105

   57 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 57 (factor)


State 106

   65 arguments: arguments COMMA . logic_expression

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable           go to state 70
    logic_expression   go to state 112
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 107

   42 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 42 (variable)


State 108

   34 statement: IF LPAREN expression RPAREN . statement
   35          | IF LPAREN expression RPAREN . statement ELSE statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    IF           shift, and go to state 46
    FOR          shift, and go to state 47
    WHILE        shift, and go to state 48
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 49
    LPAREN       shift, and go to state 50
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 51
    NOT          shift, and go to state 52
    PRINTLN      shift, and go to state 53

    compound_statement    go to state 54
    var_declaration       go to state 55
    type_specifier        go to state 56
    statement             go to state 113
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 109

   33 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    LPAREN       shift, and go to state 50
    NOT          shift, and go to state 52

    variable           go to state 60
    expression         go to state 114
    logic_expression   go to state 62
    rel_expression     go to state 63
    simple_expression  go to state 64
    term               go to state 65
    unary_expression   go to state 66
    factor             go to state 67


State 110

   36 statement: WHILE LPAREN expression RPAREN . statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    IF           shift, and go to state 46
    FOR          shift, and go to state 47
    WHILE        shift, and go to state 48
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 49
    LPAREN       shift, and go to state 50
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 51
    NOT          shift, and go to state 52
    PRINTLN      shift, and go to state 53

    compound_statement    go to state 54
    var_declaration       go to state 55
    type_specifier        go to state 56
    statement             go to state 115
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 111

   37 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 116


State 112

   65 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 65 (arguments)


State 113

   34 statement: IF LPAREN expression RPAREN statement .
   35          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 117

    $default  reduce using rule 34 (statement)


State 114

   33 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 118


State 115

   36 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 36 (statement)


State 116

   37 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 37 (statement)


State 117

   35 statement: IF LPAREN expression RPAREN statement ELSE . statement

    ID           shift, and go to state 42
    CONST_INT    shift, and go to state 43
    CONST_FLOAT  shift, and go to state 44
    ADDOP        shift, and go to state 45
    IF           shift, and go to state 46
    FOR          shift, and go to state 47
    WHILE        shift, and go to state 48
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 49
    LPAREN       shift, and go to state 50
    LCURL        shift, and go to state 31
    SEMICOLON    shift, and go to state 51
    NOT          shift, and go to state 52
    PRINTLN      shift, and go to state 53

    compound_statement    go to state 54
    var_declaration       go to state 55
    type_specifier        go to state 56
    statement             go to state 119
    expression_statement  go to state 59
    variable              go to state 60
    expression            go to state 61
    logic_expression      go to state 62
    rel_expression        go to state 63
    simple_expression     go to state 64
    term                  go to state 65
    unary_expression      go to state 66
    factor                go to state 67


State 118

   33 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement
